welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: value baissebrosse
baissebrosse();
^Program:13: error: not found: value levebrosse
levebrosse();
^